--- a/Coffee store/header.css
+++ b/Coffee store/header.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif; /* More modern font for consistency */
     box-sizing: border-box;
 }
 
@@ -10,7 +10,7 @@
 .social-media {
     height: 35px;
     width: 100%;
-    background-color: rgb(50, 51, 46);
+    background-color: rgb(32, 30, 30); /* Your primary color */
     display: flex;
     align-items: center;
     padding-left: 10px;
@@ -23,28 +23,23 @@
 
 .social-media i {
     font-size: 20px;
-    color: white;
+    color: #f1ebe4; /* Light color for icons */
     padding-right: 10px;
-    background-color: rgb(50, 51, 46);
     cursor: pointer;
 }
 
+/* Offer Text */
 .offer {
-    align-items: center;
-    padding-left: 500px;
     text-align: center;
-    margin-top: -20px;
     color: #f1ebe4;
     font-size: 15px;
+    margin-top: -20px;
+    padding-left: 500px;
+
 }
 
-.left-arrow {
-    font-size: 10px;
-    margin-right: -7px;
-    cursor: pointer;
-}
-
-.right-arrow {
+/* Left and Right Arrows */
+.left-arrow, .right-arrow {
     font-size: 10px;
     cursor: pointer;
 }
@@ -55,9 +50,10 @@
     height: 120px;
     display: flex;
     align-items: center;
-    background-color: #696B61;
+    background-color: rgb(32, 30, 30);; /* Primary color */
     padding: 0 20px;
     border-bottom: 0.4px dashed rgba(255, 255, 255, 0.774);
+    justify-content: space-between; /* Aligns logo, search bar, and cart button */
 }
 
 .header-1 {
@@ -73,7 +69,10 @@
 .search-bar {
     display: flex;
     align-items: center;
-    margin-left: 120px;
+    justify-content: center;
+    flex-grow: 1; /* Allows search bar to take available space */
+    /* text-align: center; */
+    margin-left: 100px;
 }
 
 .search-bar input {
@@ -81,13 +80,12 @@
     border: 1px solid #ccc;
     border-radius: 50px;
     width: 600px;
-    box-sizing: border-box;
-    background-color: #696B61;
-    color: white;
+    background-color: white; /* Contrasting background for input */
+    color: black;
 }
 
 .search-bar ::placeholder {
-    color: white;
+    color: black;
 }
 
 .search-bar i {
@@ -107,16 +105,17 @@
     align-items: center;
     justify-content: center;
     border: none;
-    background-color: #f1ebe4;
+    /* background-color: #f1ebe4; */
     cursor: pointer;
     font-size: 16px;
     padding: 0 20px;
+    transition: background-color 0.3s ease;
 }
 
 .cart {
     display: flex;
     align-items: center;
-    margin-left: 130px;
+    margin-left: 30px;
 }
 
 .cart i {
@@ -131,7 +130,7 @@
 
 /* Navbar Container */
 .navbar-container {
-    background-color: #696B61;
+    background-color: rgb(32, 30, 30);; /* Complementary to #2c3e50 */
     height: 90px;
     display: flex;
     align-items: center;
@@ -149,17 +148,17 @@
 }
 
 .options a:hover {
-    color: antiquewhite;
+    color: #f1ebe4;
     text-decoration: underline;
 }
 
-/* category Dropdown */
+/* Category Dropdown */
 .category {
     display: flex;
     align-items: center;
     margin-left: auto;
     margin-right: 80px;
-    background-color: #696B61;
+    /* background-color: #5d6d7e;  */
     position: relative;
 }
 
@@ -414,6 +413,7 @@
         height: 320px;
     }
 }
+
 .notification {
     position: fixed; /* Fixed at the top */
     top: 0;
